# textwash

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  anon.py  anonymiser.py  anonymizer.py  bert_model.py  config.py  data_processor.py  pyproject.toml  requirements.txt  utils.py
data/: label_count.pkl  label_map.pkl  months.txt
examples/: 1.txt  daniel_craig.txt  kate_middleton.txt
paper/: paper.html  paper.md
paper/study1/person_descriptions/: masked_demographics_person_descriptions_study1.csv
paper/study1/person_descriptions/anon/: famous_100_d_1_5.txt  famous_101_d_1_6.txt  famous_102_d_1_7.txt  famous_103_d_1_5.txt  famous_104_d_1_2.txt  famous_105_d_1_1.txt  famous_106_d_1_7.txt  famous_107_d_1_4.txt  famous_108_d_1_4.txt  famous_109_d_1_5.txt  famous_10_d_1_8.txt  famous_110_d_1_8.txt  famous_111_d_1_7.txt  famous_112_d_1_9.txt  famous_113_d_1_1.txt  famous_114_d_1_6.txt  famous_115_d_1_4.txt  famous_116_d_1_7.txt  famous_117_d_1_2.txt  famous_118_d_1_9.txt  famous_119_d_1_9.txt  famous_11_d_1_4.txt  famous_120_d_1_6.txt  famous_121_d_1_1.txt  famous_122_d_1_5.txt  famous_123_d_1_5.txt  famous_124_d_1_5.txt  famous_125_d_1_4.txt  famous_126_d_1_10.txt  famous_127_d_1_10.txt  famous_128_d_1_1.txt  famous_129_d_1_4.txt  famous_12_d_1_8.txt  famous_130_d_1_9.txt  famous_131_d_1_7.txt  famous_132_d_1_3.txt  famous_133_d_1_4.txt  famous_134_d_1_8.txt  famous_135_d_1_3.txt  famous_136_d_1_1.txt  (+1162 more)
paper/study1/person_descriptions/orig/: famous_100_d_1_5.txt  famous_101_d_1_6.txt  (+1200 more)
paper/study2/person_descriptions/: masked_demographics_person_descriptions_study2.csv
textwash/: __init__.py  __main__.py  anon.py  anonymizer.py  config.py
(+2160 files in other folders)
